--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,7 +1,7 @@
 nav {
   position: fixed;
   top: 0;
-  height: 120px;
+  height: 90px;
   width: 100%;
   background-color: #4056A1;
   color: #FFF;
